# cloze

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  STYLE_GUIDE.md  manage.py  migrate_schema.py  pyproject.toml  requirements-dev.txt  requirements.txt
llm_chat/: __init__.py
llm_chat/models/: __init__.py  audit.py  chat_window.py  core.py  safety_plan.py  settings.py  study_flow.py
llm_chat/routes/: admin.py  auth.py  chat_windows.py  conversations.py  provider.py  reports.py  safety_plan.py
llm_chat/services/: guard.py  llm_interface.py  notifications.py  report_utils.py
llm_chat/utils/: access_hours.py  passwords.py  settings_resolution.py
prompts/: __init__.py  composer.py  loader.py  registry.py
prompts/constitutional/: identity.md  safety.md  scope.md  system_context.md
prompts/domains/: anxiety.md  checkin.md  depression.md  general_support.md  positive_symptoms.md  trauma.md
report/: config.py  generator.py  registry.py  unified_report_generator.py
report/analyzers/: __init__.py  (+1 more)
scripts/: generate_report.py
static/: device-preview.html
templates/: 403.html  404.html  500.html  admin_dashboard.html  admin_login.html  base.html  conversation.html  login.html  patient_reports.html  provider_chat_windows.html  provider_chats.html  provider_dashboard.html  provider_patient_progress.html  provider_settings.html  study_design.html  user_chat_windows.html  user_dashboard.html
tests/: conftest.py  test_auth.py  test_models.py  test_prompt_composition.py  test_rbac.py  test_smoke.py
(+18 files in other folders)
