# Tooling configuration only (lint + tests). Cloze is run as an application
# (see manage.py), not installed as a package, so there is no [build-system].

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = [".venv", "instance", "migrations", "__pycache__"]

[tool.ruff.lint]
# Start conservative: real errors (pyflakes) and obvious bug-prone patterns.
# Widen this list as the codebase is cleaned up.
select = ["F", "E9", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
